test/functions/lydia/genericActualTypeArg2.good
genericActualTypeArg2.chpl:2: error: the type of the actual argument 'Foo' is generic
