test/functions/lydia/genericActualTypeArg2.chpl

writeln(Foo:string);

class Foo {
  var x;
}
